[project]
name = "expences-tracker-mcpserver"
version = "0.1.0"
description = "A personal finance MCP server — track expenses, income, and budgets via natural language using AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
]
